# Chaos

./: .gitignore  README.md  pyproject.toml  run.sh  specs.md
.agent/: instructions.md
.agent/workflows/: instructions.md
src/: config.py  logger.py  main.py  patch_autogen.py
src/agent/: agents.py  compress.py  context.py  manager.py  orchestrator.py  state.py
src/agent/prompts/: architect.md  coder.md  reviewer.md  tester.md
src/cli/: banner.py
src/tools/: file_tools.py  index_tools.py  lsp_manager.py  lsp_tools.py  shell_tools.py
tests/: ambiguity_test.py  test_compress.py  test_incremental_index.py  test_index.py  test_lsp_frontend.py  test_lsp_suite.py  verify_ambiguity.py
