[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent"
version = "0.1.0"
description = "An AI-powered coding agent built with Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dotenv",
    "pydantic",
    "pyautogen",
    "volcengine-python-sdk",
    "rich",
    "autogen>=0.9.7",
    "openai>=2.14.0",
    "arize-phoenix-otel>=0.14.0",
    "arize-phoenix>=12.15.1",
    "openinference-instrumentation-openai>=0.1.41",
    "openinference-instrumentation-autogen>=0.1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
